Fixed: caching support for DX9, added clear cache tool