@@ -4,25 +4,25 @@
     <groupId>org.joget.marketplace</groupId>
     <artifactId>template-datalist-formatter</artifactId>
     <packaging>bundle</packaging>
-    <version>7.0.1</version>
+    <version>9.0.0</version>
     <name>template-datalist-formatter</name>
     <url>http://www.joget.org</url>
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.5.0</version>
                 <configuration>
-                    <skipTests>false</skipTests>
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -32,7 +32,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <skipTests>false</skipTests>
+                            <skipTests>true</skipTests>
                         </configuration>
                     </execution>
                 </executions>
@@ -41,19 +41,24 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <version>5.1.9</version>
                 <configuration>
                     <instructions>
                         <!-- Change package and plugin class here -->
                         <Export-Package></Export-Package>
                         <Private-Package>{local-packages}</Private-Package>
                         <Bundle-Activator>org.joget.marketplace.Activator</Bundle-Activator>
-                        <Import-Package>!*,org.joget.report.dao,org.joget.report.model,org.joget.report.service,org.joget.commons.util,org.joget.plugin.base,org.joget.plugin.property.model,org.joget.plugin.property.service,org.joget.directory.model,org.joget.directory.model.service,org.joget.directory.dao,org.joget.workflow.model,org.joget.workflow.model.dao,org.joget.workflow.model.service,org.joget.workflow.util,org.joget.apps.app.dao,org.joget.apps.app.lib,org.joget.apps.app.model,org.joget.apps.app.service,org.joget.apps.datalist.lib,org.joget.apps.datalist.model,org.joget.apps.datalist.service,org.joget.apps.form.lib,org.joget.apps.form.dao,org.joget.apps.form.model,org.joget.apps.form.service,org.joget.apps.list.service,org.joget.apps.userview.lib,org.joget.apps.userview.model,org.joget.apps.userview.service,org.joget.apps.workflow.lib,javax.servlet,javax.servlet.http,org.osgi.framework;version="1.3.0"</Import-Package>
+                        <Import-Package>!*,org.joget.report.dao,org.joget.report.model,org.joget.report.service,org.joget.commons.util,org.joget.plugin.base,org.joget.plugin.property.model,org.joget.plugin.property.service,org.joget.directory.model,org.joget.directory.model.service,org.joget.directory.dao,org.joget.workflow.model,org.joget.workflow.model.dao,org.joget.workflow.model.service,org.joget.workflow.util,org.joget.apps.app.dao,org.joget.apps.app.lib,org.joget.apps.app.model,org.joget.apps.app.service,org.joget.apps.datalist.lib,org.joget.apps.datalist.model,org.joget.apps.datalist.service,org.joget.apps.form.lib,org.joget.apps.form.dao,org.joget.apps.form.model,org.joget.apps.form.service,org.joget.apps.list.service,org.joget.apps.userview.lib,org.joget.apps.userview.model,org.joget.apps.userview.service,org.joget.apps.workflow.lib,org.osgi.framework;version="1.3.0"</Import-Package>
                         <!-- End change package and plugin class here -->
                         <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Embed-Directory>dependency</Embed-Directory>
                         <Embed-StripGroup>true</Embed-StripGroup>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        
+                        <!-- Plugin Information -->
+                        <Joget-Name>Template Datalist Formatter</Joget-Name>
+                        <Joget-Description>Transforms normal tabular datalist row to use user defined template.</Joget-Description>
                     </instructions>
                 </configuration>
             </plugin>
@@ -63,13 +68,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.4</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.joget</groupId>
             <artifactId>wflow-core</artifactId>
-            <version>7.0-SNAPSHOT</version>
+            <version>9.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.servlet</groupId>
@@ -95,17 +100,24 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.0</version>
+            <scope>provided</scope>
         </dependency>
+           <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
+            <scope>provided</scope>
+        </dependency>   
         <!-- End change plugin specific dependencies here -->
     </dependencies>
     <distributionManagement>
         <repository>
             <id>internal</id>
-            <url>http://dev.joget.org/archiva/repository/internal</url>
+            <url>https://dev.joget.org/archiva/repository/internal</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://dev.joget.org/archiva/repository/snapshots</url>
+            <url>https://dev.joget.org/archiva/repository/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
